--- a/ProyectoJuBa/nbproject/project.properties
+++ b/ProyectoJuBa/nbproject/project.properties
@@ -29,10 +29,12 @@ dist.jar=${dist.dir}/ProyectoJuBa.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.NefAnimacion_v2.jar=../dependencias/NefAnimacion_v2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${file.reference.NefAnimacion_v2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
