resuelto problema de fecha en ingreso de usuario frm cuenta, eliminacion de labels iconos usuario y candado en frmautenticacion, funcionamiento correcto de la aplicacion

--- a/ProyectoJuBa/nbproject/project.properties
+++ b/ProyectoJuBa/nbproject/project.properties
@@ -29,12 +29,14 @@ dist.jar=${dist.dir}/ProyectoJuBa.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.AbsoluteLayout.jar=/home/julian/gitClones/dependencias/AbsoluteLayout.jar
 file.reference.NefAnimacion_v2.jar=../dependencias/NefAnimacion_v2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${file.reference.NefAnimacion_v2.jar}
+    ${file.reference.NefAnimacion_v2.jar}:\
+    ${file.reference.AbsoluteLayout.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
