--- a/ProyectoJuBa/nbproject/project.properties
+++ b/ProyectoJuBa/nbproject/project.properties
@@ -30,13 +30,16 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.AbsoluteLayout.jar=/home/julian/gitClones/dependencias/AbsoluteLayout.jar
+file.reference.mysql-connector-java-5.1.23-bin.jar=C:\\Users\\Jerson Junqui\\Documents\\NetBeansProjects\\mysql-connector-java-5.1.23-bin.jar
 file.reference.NefAnimacion_v2.jar=../dependencias/NefAnimacion_v2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.NefAnimacion_v2.jar}:\
-    ${file.reference.AbsoluteLayout.jar}
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.mysql-connector-java-5.1.23-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
